<resources>
    <string name="app_name">RegistrationApp</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="registration_form">Registration Form</string>
    <string name="todo">TODO</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="postal_address">PostalAddress</string>
</resources>
